monitoring/grafana/grafana_reporter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-reporter-svc
  namespace: prometheus
spec:
  ports:
  - port: 8686
    protocol: TCP
    targetPort: 8686
  selector:
    app: grafana-reporter
  type: ClusterIP
