monitoring/grafana/grafana_reporter/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-reporter-ingress
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target https://kubernetes.github.io/ingress-nginx/examples/rewrite/
spec:
  ingressClassName: nginx
  rules:
  - host: grafana-reporter.wus2.test-system.azgrafana-test.io
    http:
      paths:
      - backend:
          serviceName: grafana-reporter-svc
          servicePort: 8686
        path: /
  tls:
  - hosts:
    - grafana-reporter.wus2.test-system.azgrafana-test.io
    secretName: prom-tls
